--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,12 @@
 @import 'bootstrap/dist/css/bootstrap.css';
+@import url('https://fonts.googleapis.com/css2?family=Qwigley&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mali&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Qwigley', cursive;
 }
 
 a {
@@ -18,5 +19,15 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  background: url("https://c4.wallpaperflare.com/wallpaper/376/135/830/background-sequins-golden-gold-wallpaper-preview.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover; /* For WebKit*/
+    -moz-background-size: cover;    /* Mozilla*/
+    -o-background-size: cover;      /* Opera*/
+    background-size: cover;
+}
+.check-in-form {
+  font-family: 'Mali', cursive;
+}
+.vp-card {
+  font-family: 'Mali', cursive;
 }
